--- a/Icebreaker/marketplace/templates/marketplace/my_products.html
+++ b/Icebreaker/marketplace/templates/marketplace/my_products.html
@@ -1,6 +1,6 @@
 {% extends 'marketplace/test.html' %}
-{% block content %}
 {% load widget_tweaks %}
+{% block content %}
 <!--
 <div class="main">
   <h1>my products</h1>
@@ -47,6 +47,7 @@
     {% endfor %}
 </div>
   </div>-->
+<main>
 <br>
 
 <div class="row">
@@ -77,4 +78,5 @@
     {% endfor %}
 
 </div>
+</main>
 {% endblock %}
