--- a/Icebreaker/marketplace/templates/marketplace/product_add.html
+++ b/Icebreaker/marketplace/templates/marketplace/product_add.html
@@ -1,6 +1,7 @@
 {% extends "marketplace/test.html" %}
-{% block content %}
 {% load widget_tweaks %}
+{% block content %}
+<main>
 <div class="container">
   <div class="card hoverable">
     <div class="card-body">
@@ -157,4 +158,5 @@
       </div>
     </div>
 </div>
+</main>
 {% endblock %}
