--- a/Icebreaker/register/templates/register/edit_profile.html
+++ b/Icebreaker/register/templates/register/edit_profile.html
@@ -131,8 +131,9 @@
                 <hr>
 
               </div>
-              <div class="tab-pane" id="password"><!--/tab-pane-->
-                <button><a href="{% url 'register:change_password' %}">change password</a></button>
+              <div class="tab-pane" id="password"><!--/tab-pane--><br>
+                <a href="{% url 'register:change_password' %}">change password</a>
+              
               </div>
 
               </div><!--/tab-pane-->
@@ -140,4 +141,5 @@
 
         </div><!--/col-9-->
     </div><!--/row-->
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 {% endblock %}
