--- a/Icebreaker/startFundraiser/templates/startFundraiser/home.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/home.html
@@ -154,7 +154,7 @@
                <div class="col-sm-4">
                   <div class="article">
                      <div>
-                        <img src="{% static 'startFundraiser/images/post-1.jpg' %}" class="img-responsive">
+                        <img src="{{ campaign.image.url }}" class="img-responsive">
                      </div>
                      <br>
                      <div class="article-content">
@@ -232,4 +232,3 @@
       </script>
    </body>
 </html>
-
