--- a/Icebreaker/marketplace/templates/marketplace/blog.html
+++ b/Icebreaker/marketplace/templates/marketplace/blog.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 {% block content %}
 <!--slider-->
-
+<main>
 <div class="slider">
 <ul class="slides">
   <li>
@@ -20,14 +20,14 @@
     </div>
   </li>
   <li>
-    <img src="{% static 'startFundraiser/img/banner01.jpg'%}"> <!-- random image -->
+    <img src="{% static 'startFundraiser/img/banner02.jpg'%}"> <!-- random image -->
     <div class="caption right-align">
       <h3>Right Aligned Caption</h3>
       <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
     </div>
   </li>
   <li>
-    <img src="{% static 'startFundraiser/img/banner01.jpg'%}"> <!-- random image -->
+    <img src="{% static 'startFundraiser/img/banner03.jpg'%}"> <!-- random image -->
     <div class="caption center-align">
       <h3>This is our big Tagline!</h3>
       <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -69,5 +69,5 @@ $(document).ready(function(){
   });
 
 </script>
-
+</main>
 {% endblock %}
