--- a/Icebreaker/marketplace/templates/marketplace/product_details.html
+++ b/Icebreaker/marketplace/templates/marketplace/product_details.html
@@ -1,5 +1,6 @@
 {% extends 'marketplace/test.html' %}
 {% block content %}
+<main>
 <!-- <div class="trend-details">
   <div class="img">
     <img src="{{ details.image.url }}"/>
@@ -19,7 +20,7 @@
   <div class="col s12 l6">
     <img src="{{ details.image.url }}" style="width:100%; height:400px;">
   </div>
-  
+
   <div class="col s12 l5 offset-l1">
       <div class="row">
         <div class="col s12 l6">
@@ -76,4 +77,5 @@
     </div>
 </div>
 </div>
+</main>
 {% endblock %}
