--- a/Icebreaker/marketplace/templates/marketplace/test.html
+++ b/Icebreaker/marketplace/templates/marketplace/test.html
@@ -40,7 +40,7 @@
           <li><a href="{% url 'marketplace:products_blog' %}">blog</a></li>
           <li><a href="{% url 'marketplace:add_product' %}">Add Products</a></li>
           <li><a href="{% url 'marketplace:my_products' %}">My Product</a></li>
-          <li><a href="/marketplace/add_tocart/"+str(id)><i class="fas fa-cart-plus"></i></a></li>
+          <!-- <li><a href="/marketplace/add_tocart/"+str(id)><i class="fas fa-cart-plus"></i></a></li> -->
           <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Hi {{request.user}}<i class="material-icons right">arrow_drop_down</i></a></li>
 
           <script type="text/javascript">
