--- a/Icebreaker/startFundraiser/templates/startFundraiser/detail.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/detail.html
@@ -60,7 +60,8 @@
       </span>&nbsp;
       </button>
       {% endif %}&nbsp&nbsp
-           <a href="https://api.whatsapp.com/send?phone=+91 9121587454&text={{ campaign1.campaign_Title }} {{ campaign1.overview }}" data-toggle="tooltip" title="whatsapp share"><i class="fab fa-whatsapp fa-4x"></i></a>
+
+           <a href="https://api.whatsapp.com/send?phone=&text='{{ campaign1.campaign_Title }} {{ campaign1.overview }}'" data-toggle="tooltip" title="whatsapp share"><i class="fab fa-whatsapp fa-4x"></i></a>
 
    </div>
 </div>
